--- a/My jn/Tensorflow beggining.ipynb
+++ b/My jn/Tensorflow beggining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -230,9 +230,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading Cal. housing from https://ndownloader.figshare.com/files/5976036 to C:\\Users\\maguileracanon\\scikit_learn_data\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn.datasets import fetch_california_housing\n",
@@ -252,24 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-3.68962631e+01],\n",
-       "       [ 4.36777472e-01],\n",
-       "       [ 9.44449380e-03],\n",
-       "       [-1.07348785e-01],\n",
-       "       [ 6.44962370e-01],\n",
-       "       [-3.94082872e-06],\n",
-       "       [-3.78797273e-03],\n",
-       "       [-4.20847952e-01],\n",
-       "       [-4.34020907e-01]], dtype=float32)"
+       "array([[-3.7185181e+01],\n",
+       "       [ 4.3633747e-01],\n",
+       "       [ 9.3952334e-03],\n",
+       "       [-1.0711310e-01],\n",
+       "       [ 6.4479220e-01],\n",
+       "       [-4.0338000e-06],\n",
+       "       [-3.7813708e-03],\n",
+       "       [-4.2348403e-01],\n",
+       "       [-4.3721911e-01]], dtype=float32)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,21 +339,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 MSE = 12.408014\n",
-      "Epoch 100 MSE = 0.75519687\n",
-      "Epoch 200 MSE = 0.5420874\n",
+      "Epoch 0 MSE = 12.408015\n",
+      "Epoch 100 MSE = 0.75519705\n",
+      "Epoch 200 MSE = 0.5420873\n",
       "Epoch 300 MSE = 0.53317\n",
       "Epoch 400 MSE = 0.53053814\n",
       "Epoch 500 MSE = 0.5287964\n",
-      "Epoch 600 MSE = 0.527549\n",
-      "Epoch 700 MSE = 0.5266497\n",
+      "Epoch 600 MSE = 0.52754897\n",
+      "Epoch 700 MSE = 0.5266498\n",
       "Epoch 800 MSE = 0.5260011\n",
       "Epoch 900 MSE = 0.5255332\n"
      ]
@@ -379,21 +387,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 MSE = 12.408014\n",
-      "Epoch 100 MSE = 0.75519687\n",
-      "Epoch 200 MSE = 0.5420874\n",
+      "Epoch 0 MSE = 12.408015\n",
+      "Epoch 100 MSE = 0.75519705\n",
+      "Epoch 200 MSE = 0.5420873\n",
       "Epoch 300 MSE = 0.53317\n",
       "Epoch 400 MSE = 0.53053814\n",
       "Epoch 500 MSE = 0.5287964\n",
-      "Epoch 600 MSE = 0.527549\n",
-      "Epoch 700 MSE = 0.5266497\n",
+      "Epoch 600 MSE = 0.52754897\n",
+      "Epoch 700 MSE = 0.5266498\n",
       "Epoch 800 MSE = 0.5260011\n",
       "Epoch 900 MSE = 0.5255332\n"
      ]
@@ -440,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -524,10 +532,10 @@
       "Epoch 0 MSE = 9.161542\n",
       "Epoch 100 MSE = 0.7145004\n",
       "Epoch 200 MSE = 0.56670487\n",
-      "Epoch 300 MSE = 0.55557173\n",
-      "Epoch 400 MSE = 0.5488112\n",
+      "Epoch 300 MSE = 0.5555718\n",
+      "Epoch 400 MSE = 0.54881126\n",
       "Epoch 500 MSE = 0.5436363\n",
-      "Epoch 600 MSE = 0.53962904\n",
+      "Epoch 600 MSE = 0.53962916\n",
       "Epoch 700 MSE = 0.5365092\n",
       "Epoch 800 MSE = 0.53406775\n",
       "Epoch 900 MSE = 0.5321473\n"
@@ -572,16 +580,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W0716 16:08:52.810745  6748 deprecation.py:323] From c:\\users\\pc42630\\appdata\\local\\programs\\python\\python35\\lib\\site-packages\\tensorflow\\python\\training\\saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use standard file APIs to check for files with this prefix.\n"
+      "INFO:tensorflow:Restoring parameters from /tmp/my_model_final.ckpt\n"
      ]
     }
    ],
@@ -596,24 +602,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.0685525 ],\n",
+       "array([[ 2.0685523 ],\n",
        "       [ 0.8874027 ],\n",
-       "       [ 0.14401658],\n",
-       "       [-0.34770882],\n",
-       "       [ 0.36178368],\n",
+       "       [ 0.14401656],\n",
+       "       [-0.3477088 ],\n",
+       "       [ 0.36178365],\n",
        "       [ 0.00393811],\n",
        "       [-0.04269556],\n",
-       "       [-0.6614528 ],\n",
-       "       [-0.6375277 ]], dtype=float32)"
+       "       [-0.66145283],\n",
+       "       [-0.6375278 ]], dtype=float32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,14 +648,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -725,11 +731,11 @@
       "Best theta:\n",
       "[[ 2.0703337 ]\n",
       " [ 0.8637145 ]\n",
-      " [ 0.12255151]\n",
-      " [-0.31211874]\n",
-      " [ 0.38510373]\n",
+      " [ 0.12255152]\n",
+      " [-0.31211877]\n",
+      " [ 0.38510376]\n",
       " [ 0.00434168]\n",
-      " [-0.01232954]\n",
+      " [-0.0123295 ]\n",
       " [-0.83376896]\n",
       " [-0.8030471 ]]\n"
      ]
@@ -799,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,12 +837,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def relu(X):\n",
-    "    with tf.name_scope(\"relu\"):\n",
+    "    with tf.variable_scope(\"relu\",reuse=True):\n",
+    "        threshold=tf.get_variable(\"threshold\") # reuse existing variable\n",
     "        w_shape=(int(X.get_shape()[1]),1)\n",
     "        w=tf.Variable(tf.random_normal(w_shape),name=\"weights\")\n",
     "        b=tf.Variable(0.0,name=\"bias\")\n",
@@ -846,8 +853,36 @@
     "n_features = 3\n",
     "X = tf.placeholder(tf.float32, shape=(None, n_features),name=\"X\")\n",
     "with tf.variable_scope(\"relu\"):\n",
-    "    threshold\n",
+    "    threshold = tf.get_variable(\"threshold\",shape=(),initializer=tf.constant_initializer(0.0)) # creates\n",
     "relus = [relu(X) for i in range(5)]\n",
+    "output = tf.add_n(relus,name=\"output\") # add all results from 1 function\n",
+    "\n",
+    "file_writer=tf.summary.FileWriter(\"logs/relu1\",tf.get_default_graph())\n",
+    "file_writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternative so that the threshold variable doesnt have to be assigned outside of the relu funciton\n",
+    "reset_graph()\n",
+    "def relu(X):\n",
+    "    threshold = tf.get_variable(\"threshold\",shape=(),initializer=tf.constant_initializer(0.0)) # reuse existing variable\n",
+    "    w_shape=(int(X.get_shape()[1]),1)\n",
+    "    w=tf.Variable(tf.random_normal(w_shape),name=\"weights\")\n",
+    "    b=tf.Variable(0.0,name=\"bias\")\n",
+    "    z= tf.add(tf.matmul(X,w),b,name=\"z\") # I am assuming all of these names are for the tensorgraph\n",
+    "    return tf.maximum(z,0.,name=\"relu\")\n",
+    "\n",
+    "n_features = 3\n",
+    "X = tf.placeholder(tf.float32, shape=(None, n_features),name=\"X\")\n",
+    "relus = []\n",
+    "for relu_index in range(5):\n",
+    "    with tf.variable_scope(\"relu\",reuse=(relu_index>=1)) as scope:\n",
+    "        relus.append(relu(X))\n",
     "output = tf.add_n(relus,name=\"output\") # add all results from 1 function\n",
     "\n",
     "file_writer=tf.summary.FileWriter(\"logs/relu1\",tf.get_default_graph())\n",
@@ -871,7 +906,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
